--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <title>Contacto</title>
+    <title>VeneTour</title>
+    <meta name="description" content="Si quieres vivir una expericiencia de vacaciones diferente conoce nuestros paquetes y aprovecha los precios.">
+  <meta name="keywords" content="viajes, vacaciones, camping, descanso, aire libre, ejercicio, , actividad deportiva, aventura, trekking, senderismo, caminatas, excursiones">
 </head>
 <body>
     <header class="encabezado">
